# stonks-cli

./: .gitignore  DOC.md  README.md  README2.md  TODO-30MARCH.md  mcp-config.example.json  pyproject.toml  tasks.txt  todo.txt
.github/workflows/: ci.yml
asset/reference/: example_plugin.py
scripts/: smoke_llm_backends.py
src/stonks/: __main__.py  cli.py  commands.py  config.py  errors.py  pipeline.py  plugins.py  storage.py
src/stonks/analysis/: backtest.py  engine.py  indicators.py  output.py  risk.py  strategy.py
src/stonks/chat/: __init__.py  dispatch.py  export.py  history.py  prompts.py  repl.py
src/stonks/data/: cache.py  providers.py
src/stonks/llm/: backends.py
src/stonks/reporting/: backtest_report.py  json_report.py  report.py
src/stonks/scheduler/: pidfile.py  run.py
src/stonks_cli/: __main__.py  cli.py  commands.py  config.py  errors.py  logging_utils.py  mcp_server.py  paths.py  pipeline.py  plugins.py  storage.py
src/stonks_cli/alerts/: checker.py  models.py  notify.py  storage.py
src/stonks_cli/analysis/: backtest.py  correlation.py  engine.py  indicators.py  output.py  strategy.py  unusual.py
src/stonks_cli/charts/: candlestick.py  comparison.py  indicators.py  price_chart.py
src/stonks_cli/chat/: dispatch.py  export.py  history.py  message_prep.py  prompts.py  repl.py
src/stonks_cli/data/: __init__.py  (+12 more)
tests/: test_alert_validation.py  test_alpaca_provider.py  test_analyze_integration.py  test_backtest.py  test_cache_info.py  test_cache_purge.py  test_cache_ttl_expiry.py  test_chat_analyze_integration.py  test_chat_dispatch_commands.py  test_chat_message_prep.py  test_config.py  test_config_validate.py  test_csv_provider.py  test_csv_summary_output.py  test_data_sufficiency_summary.py  test_data_verify_health.py  test_doctor.py  test_doctor_output_smoke.py  test_earnings_calendar.py  test_event_logging.py  test_example_plugin_smoke.py  test_finnhub_provider.py  test_json_report_sizing_fields.py  test_llm_backends.py  test_llm_check.py  test_llm_prompt_formatting.py  test_market_snapshot.py  test_mcp_server.py  test_negative_cache.py  test_paths.py  test_pipeline_indicator_dedup.py  test_plugin_return_type_validation.py  test_plugins.py  test_plugins_list.py  test_polymarket_provider.py  test_portfolio_header_summary.py  test_report_latest.py  test_report_name_option.py  test_report_sorting.py  test_report_view.py  (+13 more)
(+33 files in other folders)
