[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "stonks-cli"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
  "apscheduler>=3.10",
  "numpy>=1.26",
  "pandas>=2.2",
  "prompt-toolkit>=3.0",
  "pydantic>=2.7",
  "requests>=2.32",
  "rich>=13.7",
  "typer>=0.12",
  "uv>=0.9.21",
]

[project.optional-dependencies]
ollama = ["ollama>=0.3"]
llama-cpp = ["llama-cpp-python>=0.3"]
mlx = ["mlx-lm>=0.14"]
transformers = ["transformers>=4.46", "torch>=2.3"]

[project.scripts]
stonks-cli = "stonks_cli.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
