[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "stonks-cli"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
  "apscheduler>=3.10",
  "numpy>=1.26",
  "pandas>=2.2",
  "pydantic>=2.7",
  "requests>=2.32",
  "rich>=13.7",
  "typer>=0.12",
  "uv>=0.9.21",
]

[project.scripts]
stonks-cli = "stonks_cli.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
